--- a/Assets/style.css
+++ b/Assets/style.css
@@ -9,11 +9,13 @@ body {
 }
 
 .header {
-display: flex;
+    display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 60px;
     background-image: linear-gradient(to right, #FF75A0, #FCE38A, #EAFFD0, #95E1D3);
     color: #863f71;
+
 }
 
 .header h1 {
@@ -23,7 +25,8 @@ display: flex;
 
 
 .header div {
-    padding-top: 15px;
+    justify-content: space-between;
+    padding-top: 1px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -31,12 +34,18 @@ display: flex;
 }
 
 .header div ul {
-    list-style-type: none;
+    list-style-type: circle;
+    float:left;
+    display: flex;
+    flex-direction: column;
 }
 
 .header div ul li {
-    display: inline-block;
-    margin-left: 25px;
+    margin-left: 5%;
+    float: right;
+    padding-right: 2%;
+    padding-top: 3%;
+    width: auto;
 }
 
 a {
@@ -49,7 +58,6 @@ p {
 }
 
 
-
 .float-left {
     float: left;
     margin-right: 25px;
@@ -58,6 +66,7 @@ p {
 .float-right {
     float: right;
     margin-left: 25px;
+
 }
 .divcontainer {
 display:flex;
@@ -70,13 +79,19 @@ width: 100%;
 }
 
 
-.projects-before-bootcamp {
+.about-Me {
+    margin-top: 20px;
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-image: linear-gradient(to right, #95E1D3, #EAFFD0, #FCE38A, #FF75A0);
     color: #863f71;
+}
+
+.about-Me img{
+    max-height: 200px;
+    border-radius: 5%;
 }
 
 .another-project-before-bootcamp {
@@ -97,6 +112,7 @@ width: 100%;
     color: #863f71;
 }
 
+
 .projects-before-bootcamp img {
     max-height: 200px;
 }
@@ -109,6 +125,11 @@ width: 100%;
     max-height: 200px;
 }
 
+.header img{
+    float:right;
+    max-height: 12em;
+    border-radius: 1em;
+}
 
 .footer {
     padding: 30px;
