--- a/Assets/style.css
+++ b/Assets/style.css
@@ -9,6 +9,7 @@ body {
 }
 
 .header {
+    height:25%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -73,6 +74,11 @@ display:flex;
 flex-direction: column;
 width: 100%;
 }
+.container{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
 .content {
     width: 100%;
     display: inline-block;
@@ -83,21 +89,23 @@ width: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
     padding: 50px;
-    height: 300px;
+    height: 25%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-image: linear-gradient(to right, #95E1D3, #EAFFD0, #FCE38A, #FF75A0);
     color: #863f71;
 }
 
 .about-Me img{
-    max-height: 200px;
+    max-height: 125%;
     border-radius: 5%;
 }
 
 .another-project-before-bootcamp {
+    display:flex;
+    flex-direction: row;
     margin-bottom: 20px;
     padding: 50px;
-    height: 300px;
+    height: 25%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-image: linear-gradient(to right, #FF75A0, #FCE38A, #EAFFD0, #95E1D3);
     color: #863f71;
@@ -106,7 +114,7 @@ width: 100%;
 .first-homework-assignment {
     margin-bottom: 20px;
     padding: 50px;
-    height: 300px;
+    height: 25%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-image: linear-gradient(to right, #95E1D3, #EAFFD0, #FCE38A, #FF75A0);
     color: #863f71;
@@ -119,9 +127,11 @@ width: 100%;
 
 .another-project-before-bootcamp img {
     max-height: 200px;
+    padding: 20px;
 }
 
 .first-homework-assignment img {
+    margin-top:20px;
     max-height: 200px;
 }
 
@@ -141,3 +151,4 @@ width: 100%;
 .footer h2 {
     font-size: 20px;
 }
+
