--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,154 +1,252 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-    background-color: #95E1D3;
+  background-color: #95e1d3;
 }
 
 .header {
-    height:25%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 60px;
-    background-image: linear-gradient(to right, #FF75A0, #FCE38A, #EAFFD0, #95E1D3);
-    color: #863f71;
-
+  width: 100%;
+  height: 25%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding: 60px;
+  background-image: linear-gradient(
+    to right,
+    #ff75a0,
+    #fce38a,
+    #eaffd0,
+    #95e1d3
+  );
+  color: #863f71;
 }
 
 .header h1 {
-    display: inline-block;
-    font-size: 48px;
+  font-family: "Caveat", cursive;
+  display: inline-block;
+  font-size: 48px;
 }
 
-
 .header div {
-    justify-content: space-between;
-    padding-top: 1px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
+  justify-content: space-between;
+  padding-top: 1px;
+  margin-right: 20px;
+  float: right;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 20px;
+}
+.example {
+  font-family: "Roboto Mono", monospace;
+  width: 30%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 .header div ul {
-    list-style-type: circle;
-    float:left;
-    display: flex;
-    flex-direction: column;
+  list-style-type: circle;
+  float: left;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .header div ul li {
-    margin-left: 5%;
-    float: right;
-    padding-right: 2%;
-    padding-top: 3%;
-    width: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-left: 5%;
+  float: right;
+  padding-right: 2%;
+  padding-top: 3%;
+  width: auto;
 }
 
 a {
-    color: #863f71;
-    text-decoration: none;
+  color: #863f71;
+  text-decoration: none;
 }
 
 p {
-    font-size: 16px;
+  font-size: 16px;
 }
 
-
 .float-left {
-    float: left;
-    margin-right: 25px;
+  float: left;
+  margin-right: 25px;
 }
 
 .float-right {
-    float: right;
-    margin-left: 25px;
-
+  float: right;
+  margin-left: 25px;
 }
 .divcontainer {
-display:flex;
-flex-direction: column;
-width: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
-.container{
-    display:flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 .content {
-    width: 100%;
-    display: inline-block;
+  width: 100%;
+  display: inline-block;
 }
-
 
 .about-Me {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 25%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-image: linear-gradient(to right, #95E1D3, #EAFFD0, #FCE38A, #FF75A0);
-    color: #863f71;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 25%;
+  font-family: "Roboto Mono", monospace;
+  background-image: linear-gradient(
+    to right,
+    #95e1d3,
+    #eaffd0,
+    #fce38a,
+    #ff75a0
+  );
+  color: #863f71;
 }
 
-.about-Me img{
-    max-height: 125%;
-    border-radius: 5%;
+.fts {
+  display: flex;
+  flex-direction: row;
+}
+.fts img {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 5px;
+  border-radius: 10px;
+  background-image: linear-gradient(
+    to right,
+    #95e1d3,
+    #eaffd0,
+    #fce38a,
+    #ff75a0
+  );
 }
 
-.another-project-before-bootcamp {
-    display:flex;
-    flex-direction: row;
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 25%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-image: linear-gradient(to right, #FF75A0, #FCE38A, #EAFFD0, #95E1D3);
-    color: #863f71;
+.about-Me img {
+  max-height: 200px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 5px;
+  border-radius: 10px;
+  background-image: linear-gradient(
+    to right,
+    #ff75a0,
+    #fce38a,
+    #eaffd0,
+    #95e1d3
+  );
 }
 
-.first-homework-assignment {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 25%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-image: linear-gradient(to right, #95E1D3, #EAFFD0, #FCE38A, #FF75A0);
-    color: #863f71;
+.previous-Work {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 25%;
+  font-family: "Roboto Mono", monospace;
+  background-image: linear-gradient(
+    to right,
+    #ff75a0,
+    #fce38a,
+    #eaffd0,
+    #95e1d3
+  );
+  color: #863f71;
 }
 
-
-.projects-before-bootcamp img {
-    max-height: 200px;
+.contact-Me {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 25%;
+  font-family: "Roboto Mono", monospace;
+  background-image: linear-gradient(
+    to right,
+    #95e1d3,
+    #eaffd0,
+    #fce38a,
+    #ff75a0
+  );
+  color: #863f71;
+}
+.contactBox {
+  display: flex;
+  flex: unset;
+  align-content: center;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
 
-.another-project-before-bootcamp img {
-    max-height: 200px;
-    padding: 20px;
+.previous-Work img {
+  max-height: 200px;
 }
 
-.first-homework-assignment img {
-    margin-top:20px;
-    max-height: 200px;
+.contact-Me img {
+  margin-top: 20px;
+  max-height: 200px;
 }
 
-.header img{
-    float:right;
-    max-height: 12em;
-    border-radius: 1em;
+.header img {
+  float: right;
+  max-height: 12em;
+  border-radius: 1em;
 }
 
-.footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
+.contactIcon {
+  max-height: 35px;
+  max-width: 35px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 5px;
+  border-radius: 3px;
+  background-image: linear-gradient(
+    to right,
+    #ff75a0,
+    #fce38a,
+    #eaffd0,
+    #95e1d3
+  );
+}
+
+footer {
+  padding: 30px;
+  clear: both;
+  font-family: "Roboto Mono", monospace;
+  text-align: center;
+  color: #ff75a0;
 }
 
 .footer h2 {
-    font-size: 20px;
+  font-size: 20px;
 }
 
+@media screen and (max-width: 425px) {
+  body {
+    background-color: #95e1d3;
+  }
+  body {
+    background-color: #95e1d3;
+    width: 100%;
+  }
+  html {
+    width: fit-content;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  body {
+    background-color: #fce38a;
+    width: 100%;
+  }
+  html {
+    width: fit-content;
+  }
+}
