--- a/Assets/style.css
+++ b/Assets/style.css
@@ -186,12 +186,14 @@ p {
 }
 
 .largerImage img {
-  max-height: 200px;
+  height: 95px;
+  width: 120px;
 }
 
 .smallerImage img {
-  margin-top: 55px;
-  max-height: 150px;
+  margin-top: 25px;
+  height: 75px;
+  width: 100px;
 }
 
 .contact-Me img {
@@ -234,24 +236,46 @@ footer {
 }
 
 @media screen and (max-width: 425px) {
+  .example {
+    display: none;
+  }
   body {
     background-color: #95e1d3;
   }
   body {
     background-color: #eaffd0;
-    width: 100%;
+    width: fit-content;
   }
   html {
     width: fit-content;
+  }
+  .content {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  body {
+    background-color: #fce38a;
+    width: fit-content;
+  }
+  html {
+    width: fit-content;
+  }
+  .content {
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 320px) {
   body {
     background-color: #fce38a;
-    width: 100%;
+    width: fit-content;
   }
   html {
     width: fit-content;
+  }
+  .content {
+    width: 100%;
   }
 }
